--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-*.tar.gz
-*.pkl
-.index
+#*.tar.gz
+#*.pkl
+#.index
